Update: Updating the spring boot version